7166 - Fix footer link contrast (on hover/focus)

--- a/arches/app/media/css/index.css
+++ b/arches/app/media/css/index.css
@@ -734,6 +734,11 @@ footer .footer-links {
     color: #fff;
 }
 
+.splash-link-address:focus, .splash-link-address:hover {
+    color: #7AD02F;
+    text-decoration: underline;
+}
+
 .splash-link-container {
     list-style: none;
     padding-left: 0px;
